<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sEmailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin" />

    <EditText
        android:id="@+id/sEmailInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/skeyView"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:text="@string/kennwort" />

    <EditText
        android:id="@+id/sKeyInsert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/safelogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/safe_login" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/missing_admin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/sButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anmelden" />
    </LinearLayout>

</LinearLayout>