<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/addMatureSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/AddKursButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Kurs hinzufügen." />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/addHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hier können neue Kurse hinzugefügt werden.Bitte achten sie darauf, dass sie nicht vergessen alle der Felder anzupassen."
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/addDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/insertDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:maxLength="2" >

                    <requestFocus />
                </EditText>

                <Spinner
                    android:id="@+id/addMonthSpinner"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28" />

                <Spinner
                    android:id="@+id/addYearSpinner"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.26" />

            </LinearLayout>

            <TextView
                android:id="@+id/addTimeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Uhrzeit(24h):"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/InsertTime1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    
                    
                    android:maxLength="2" />

                <TextView
                    android:id="@+id/addTimeText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/InsertTime2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                     android:maxLength="2"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/addLevelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/addKursstufeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/addWochentagText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/addStringDaySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
